// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCardV2 Snapshots matches snapshot - basic card 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-flex"
      data-backpack-ds-component="CardV2.Header"
      style="padding-top: 1rem; padding-inline-start: 1rem; padding-inline-end: 1rem; padding-bottom: 0px;"
    >
      Card Title
    </div>
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 1fr;"
    >
      Card content goes here
    </div>
    <div
      class="bpk-layout-flex"
      data-backpack-ds-component="CardV2.Footer"
      style="padding-top: 0px; padding-inline-start: 1rem; padding-inline-end: 1rem; padding-bottom: 1rem;"
    >
      Card footer
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - complex layout with all sections 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-flex"
      data-backpack-ds-component="CardV2.Header"
      style="padding-top: 1rem; padding-inline-start: 1rem; padding-inline-end: 1rem; padding-bottom: 0px;"
    >
      Product
    </div>
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 65fr auto 35fr;"
    >
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        <img
          alt="Product"
          src="product.jpg"
        />
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        <h3
          class="bpk-text bpk-text--heading-4"
          data-backpack-ds-component="Text"
        >
          Description
        </h3>
        <span
          class="bpk-text bpk-text--body-default"
          data-backpack-ds-component="Text"
        >
          Product details
        </span>
      </div>
    </div>
    <div
      class="bpk-layout-flex"
      data-backpack-ds-component="CardV2.Footer"
      style="padding-top: 0px; padding-inline-start: 1rem; padding-inline-end: 1rem; padding-bottom: 1rem;"
    >
      <button
        class="bpk-button bpk-button--primary"
        data-backpack-ds-component="Button"
        type="button"
      >
        Add to cart
      </button>
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - elevated surface color 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-elevated"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 1fr;"
    >
      Elevated background surface
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - minimal card (body only) 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 1fr;"
    >
      Minimal card with just body
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - multi-column layout with divider 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 7fr auto 3fr;"
    >
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        Main content area (70%)
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        Sidebar area (30%)
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - outlined variant 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--outlined bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-flex"
      data-backpack-ds-component="CardV2.Header"
      style="padding-top: 1rem; padding-inline-start: 1rem; padding-inline-end: 1rem; padding-bottom: 0px;"
    >
      Outlined Card
    </div>
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 1fr;"
    >
      Content with border instead of shadow
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - three-column layout 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default bpk-card-v2--surface-default"
    data-backpack-ds-component="CardV2"
  >
    <div
      class="bpk-layout-grid"
      data-backpack-ds-component="CardV2.Body"
      style="padding: 1rem; grid-template-columns: 1fr auto 2fr auto 1fr;"
    >
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        Left
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        Center
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        data-backpack-ds-component="CardV2.Section"
        style="padding: 1rem; display: flex; flex-direction: column;"
      >
        Right
      </div>
    </div>
  </div>
</div>
`;
